fix: font flicker

--- a/src/home/layout.css
+++ b/src/home/layout.css
@@ -2,7 +2,7 @@
     font-family: 'Big Shoulders Display';
     font-style: normal;
     font-weight: 700;
-    font-display: swap;
+    font-display: optional;
     src: url('/assets/fonts/big-shoulders-display-700.woff2') format('woff2');
 }
 
